# diskspace

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  linux-binaries.yml  notify-field-guide.yml
assets/icon/: AppIcon.icns
contrib/swiftbar/: diskspace.5m.sh
plugins/diskspace/.claude-plugin/: plugin.json
plugins/diskspace/skills/diskspace/: SKILL.md
rules/: builtin.yaml
src/: main.rs  output.rs  profile.rs
src/commands/: agent_surface.rs  airlock.rs  apply.rs  check.rs  classify.rs  detect.rs  doctor.rs  explain.rs  grant_cmd.rs  guard.rs  hunt.rs  mod.rs  plan.rs  profile_cmd.rs  purge.rs  quarantine.rs  receipt.rs  reclaim.rs  restore.rs  scan.rs  selfcheck.rs  status.rs  stow.rs  top.rs  trend.rs  undo.rs  watch.rs  welcome.rs  wizard.rs
src/core/: airlock_store.rs  bundle.rs  candidate.rs  classify.rs  cloud.rs  fsutil.rs  grant.rs  history.rs  metrics.rs  mod.rs  quarantine_store.rs  repack.rs  rules.rs  safety.rs  scanner.rs  series.rs
tests/: grant_agent_gate.rs  selfcheck_readonly.rs
