[package]
name = "diskspace-cli"
version = "0.11.0"
edition = "2021"
description = "Find the dead weight in your cargo hold — a personalized, reversible disk-cleanup CLI"
license-file = "LICENSE"
repository = "https://github.com/tymrtn/diskspace"
homepage = "https://github.com/tymrtn/diskspace"
readme = "README.md"
keywords = ["disk", "cleanup", "cli", "macos", "cache"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Tyler Martin <ty@tmrtn.com>"]
exclude = ["target/*", ".github/*"]

[[bin]]
name = "diskspace"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
console = "0.15"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
glob = "0.3"
include_dir = "0.7"

[profile.release]
opt-level = 3
strip = true
lto = true
