[package]
name = "diskspace-cli"
version = "0.12.1"
edition = "2021"
description = "Find the dead weight in your cargo hold — a personalized, reversible disk-cleanup CLI"
license-file = "LICENSE"
repository = "https://github.com/tymrtn/diskspace"
homepage = "https://github.com/tymrtn/diskspace"
readme = "README.md"
keywords = ["disk", "cleanup", "cli", "macos", "cache"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Tyler Martin <ty@tmrtn.com>"]
exclude = ["target/*", ".github/*"]

# `cargo binstall diskspace-cli` fetches the notarized universal macOS binary from the GitHub
# release instead of compiling from source — seconds, not minutes (the difference between an
# agent self-installing mid disk-pressure and giving up). macOS only today; other targets fall
# back to a source build. Bump the version in lockstep with the release tag (vX.Y.Z).
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/diskspace-universal"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/diskspace-universal"
pkg-fmt = "bin"

# Linux: `cargo binstall diskspace-cli` fetches the per-arch release binary built
# by .github/workflows/linux-binaries.yml (assets `diskspace-linux-x86_64` /
# `diskspace-linux-aarch64`). This is the OpenClaw (Linux) self-install path —
# the agent grabs a prebuilt binary instead of compiling under disk pressure.
# Asset names MUST stay in lockstep with the `asset:` matrix in linux-binaries.yml.
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/diskspace-linux-x86_64"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/diskspace-linux-aarch64"
pkg-fmt = "bin"

[[bin]]
name = "diskspace"
path = "src/main.rs"

[features]
# Actuation ships OFF by default. With it OFF, behavior is the existing
# human-consent flow; the grant module compiles either way (the off-box mint
# tools and the verify path are always present — security comes from WHERE the
# private key lives, never from a build flag). The `actuation` feature is the
# gate for the *autonomous* consult path that lets a verified grant substitute
# for typed-id consent / relax the confidence floor AFTER the hard pressure-test
# has already returned safe==true.
actuation = []

[dependencies]
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
console = "0.15"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
glob = "0.3"
include_dir = "0.7"
fs4 = "1.1.0"
sha2 = "0.10"
shell-words = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = 3
strip = true
lto = true
